# axum-graphql-example

./: .env  Cargo.toml  docker-compose.yaml  run-db.sh  schema.graphql  sqlx-data.json
.github/workflows/: ci.yml
.sqlx/: query-1de18d85144d5e396f799f0ced578f545ca4484dce812378c418a69ebec953cd.json  query-73dfcfa2b61dd152a8c79ab8b80e3623bbdfed8306508d756a714bc1ca30d113.json  query-9e475a852908042cbc2c47bf141a602340872a1f1741bb227ab4ae6594ccd308.json  query-d379339d952fbfeaf74a0991bcc6381b6579b8881aeeafce112aab993618237d.json  query-e427c77493fc2f373be950f3e49d6a8d3c052043df2fec91be969ced842aeca0.json
src/: graphql_schema.rs  lib.rs  main.rs  sdl_export.rs
src/city/: mod.rs
src/country/: mod.rs
tests/: integration_tests.rs
