[package]
name = "axum-graphql-example"
version = "0.1.0"
edition = "2021"

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sdl-export"
path = "src/sdl_export.rs"

[dependencies]
async-graphql = { version = "7.0.12", features = ["dataloader"] }
async-graphql-axum = "7.0.12"
axum = "0.7.9"
derive_more = { version = "1.0.0", features = ["constructor"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
] }
tokio = { version = "1.42.0", features = ["full"] }
