[package]
name = "axum-graphql-example"
version = "0.1.0"
edition = "2021"

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sdl-export"
path = "src/sdl_export.rs"

[dependencies]
async-graphql = { version = "7.0.13", features = ["dataloader"] }
async-graphql-axum = "7.0.13"
axum = "0.7.9"
derive_more = { version = "1.0.0", features = ["constructor"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.22"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
] }
tokio = { version = "1.43.0", features = ["full"] }
